# AIdeator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  concept.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_failures.txt  test_out.txt
.cursor/rules/: core-standards.mdc  docs-and-ids.mdc  language-and-structure.mdc  security-baseline.mdc  tdd-and-traceability.mdc
.cursor/skills/: project-context.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
adapters/: __init__.py  llm.py  reddit.py  tavily.py
aideator/: __init__.py  cli.py  idea_templates.py  paths.py  rebuild_docs.py
aideator/llm/: __init__.py  providers.py  registry.py
aideator/search/: __init__.py  builtin.py  duckduckgo.py  exa.py  providers.py  registry.py  searxng.py  tavily.py
api/: app.py  config.py  ideas.py  logging.py  runs.py  settings_manager.py  sharing.py  web.py
cmd/: __init__.py  rebuild_docs.py
config/: model_routing.py
db/: base.py  comments.py  ideas.py  reports.py  runs.py  schema.py  signals.py
docs/: DESIGN.md  FRONTEND-PLAN.md  FUTHUR-STEPS.md  NON_OBVIOUS.md  architecture.md  config.md  conventions.md  execution-log.md  execution-plan.md  idea-026c40ba-4ee6-45e3-a125-f1571cac897f.md  idea-04095ac7-5074-4b3e-ba28-1991a67dd9e9.md  idea-0410ccb7-17ed-49f1-956d-a450035e11c8.md  idea-064fc598-95ff-4553-bd02-1564c630fc24.md  idea-083f8b7f-b8ab-4925-9389-f4af258072ae.md  idea-0f106ed9-2e0a-4d27-898c-3d3b6225d67d.md  idea-11111111-1111-1111-1111-111111111111.md  idea-147bf2af-b35c-4b41-965a-1e6488b2267d.md  idea-1b5c21b7-bc5b-4c11-a94a-1004461ebe4d.md  idea-235e4f27-7e41-4ab8-bd4b-cb2d348548b2.md  idea-2b5612c3-692c-4d0f-a1d4-7edd8f507eb7.md  idea-2b6e107c-0c33-4ea4-acf5-6d1d0353840b.md  idea-2d4a56f1-cacd-4406-ade5-add759ce69c0.md  idea-2eddce8e-f730-4bf4-8c88-4e26ff2d45be.md  idea-2f05b47d-289d-42b7-bb81-a37667c60d59.md  idea-30abcfa9-d5e9-456d-9bae-44be8929bf72.md  idea-34cc06e8-01d8-494a-9e67-ea6e7ae6b230.md  idea-35f03038-7e8a-4a0f-aa49-86e08356a25f.md  idea-39ce14ab-15db-4c24-a830-b81909d38f4c.md  idea-3c0cebc4-554b-4ecb-ba6c-829d8cc6cc7a.md  idea-420ff812-f25f-4456-acf7-1a6dc7906cec.md  idea-49449ebb-2536-492c-8939-2556f164893a.md  idea-49a1f576-242b-4d55-9cce-87492e1e7411.md  idea-56f760ef-4d1b-45fe-8fbd-f87799b60116.md  idea-591ada86-327e-4222-953d-72af352ca03d.md  idea-5f45a923-8b27-447c-b626-a63ad4afd785.md  idea-60f0b04f-a96c-45fa-a27e-57510380cd61.md  idea-67b9f48f-7173-44d2-a811-e407d8f7e4c2.md  idea-699f654d-2f5c-42c1-9562-f29c25b5aa5a.md  idea-6a905b64-9ee5-4e94-891a-9965a2755764.md  idea-6e0decbe-ac17-4a2f-9bb0-e54248a80067.md  (+49 more)
docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md
engine/: __init__.py  analyst.py  benchmark.py  evals.py  events.py  exporter.py  forge.py  mode_guard.py  og_generator.py  orchestrator.py  plugin_sandbox.py  plugins.py  signal_collector.py  synthesizer.py
infra/: __init__.py  authz.py  backup.py  logging.py  watchdog.py
landing/: LANDING_TEMPLATE_METADATA.md  README.md  blog.html  changelog.html  config-loader.js  docs.html  forms.js  index.html  legal.html  llms.txt  package.json  robots.txt  shared-layout.js  site.config.json  sitemap.xml  status.html  styles.css
migrations/: __init__.py  guard.py
models/: idea.py  report.py  run.py  signal.py
prompts/: analyst.txt  synthesizer.txt
scripts/: check_connectivity.py  seed_example.py  test_run.py
static/css/: app.css
static/js/: app.js  palette.js  polish.js
templates/: base.html  compare.html  dashboard.html  diagnostics.html  export_report.html  idea_detail.html  idea_new.html  ideas_list.html  report_detail.html  reports_browser.html  reports_list.html  run_detail.html  runs_list.html  settings.html
templates/partials/: empty_state.html  mode_pill.html  pagination.html  sidebar.html  status_pill.html  topbar.html
tests/: conftest.py
tests/contract/: test_adapter_and_api_contracts_red.py  test_phb_contracts_red.py  test_phc_contracts_red.py  test_phd_plugin_contracts_red.py
(+49 files in other folders)
