[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aideator"
description = "AIdeator bootstrap scaffold (no business logic)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = { text = "MIT" }
authors = [{ name = "AIdeator Team" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
aideator = "aideator.cli:main"
aideator-serve = "aideator.cli:serve_entrypoint"
aideator-rebuild-docs = "aideator.cli:rebuild_docs_entrypoint"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx",
  "ruff>=0.12.0",
  "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
include = [
  "aideator",
  "api",
  "config",
  "engine",
  "models",
  "db",
  "adapters",
  "infra",
  "cmd",
  "prompts",
  "tests",
]

[tool.hatch.version]
path = "aideator/__init__.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
