[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aideator"
version = "0.9.0"
description = "Local-first FastAPI service for idea validation and markdown reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Richard Abishai", email = "you@example.com" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/ARCHITECTURA-AI/AIdeator"
Source = "https://github.com/ARCHITECTURA-AI/AIdeator"
Issues = "https://github.com/ARCHITECTURA-AI/AIdeator/issues"

[project.scripts]
aideator = "aideator.cli:main"
aideator-serve = "aideator.cli:serve_entrypoint"
aideator-rebuild-docs = "aideator.cli:rebuild_docs_entrypoint"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx",
  "ruff>=0.12.0",
  "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
include = [
  "aideator",
  "api",
  "config",
  "engine",
  "models",
  "db",
  "adapters",
  "infra",
  "migrations",
  "cmd",
  "prompts",
  "static",
  "templates",
  "tests",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
